<resources>
    <string name="app_name">TugasHalamanawal</string>
    <string name="LOKASI">lokasi</string>
    <string name="Alamat"><![CDATA[Sardonoharjo, Jl. Kaliurang No.Km. 13, Candi Karang, Sinduharjo, Kec. Ngaglik, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55581]]></string>
    <string name="Kategori"><![CDATA[> Aerobik\n> Bersepeda\n> Kelas Remaja\n> Kickboxing\n> Konsultasi nutrisi\n> Les privat\n> Pelatihan pribadi\n> Zumba\n> Functional Training]]></string>
    <string name="Deskripsi">GYMRAT adalah destinasi kebugaran utama yang sepenuhnya dilengkapi untuk memenuhi semua kebutuhan pelatihan Anda. Apakah Anda tertarik pada bodybuilding, pelatihan fungsional, cross training, atau angkat berat Olimpiade, GYMRAT siap membantu. GYMRAT adalah tempat yang sempurna untuk mencapai tujuan kebugaran Anda.</string>
    <string name="JudulDeskripsi">DESKRIPSI</string>
    <string name="JudulLayanan">LAYANAN</string>
    <string name="Redegistrasi">registrasi</string>
    <string name="Username">username\n</string>
    <string name="Email">Email</string>
    <string name="Password">password</string>
    <string name="Masuk">Masuk\n</string>
    <string name="Welcome">welcome\n</string>
    <string name="MasukAkun">masukAkun</string>
    <string name="nutrichat">Halo, saya NutriChat! ✋ Apa yang bisa saya bantu?</string>
    <string name="rekomendasi">Rekomendasi Pola Makan</string>
    <string name="rekomendasi2">Rekomendasi Camilan Sehat</string>
    <string name="nutri_chat">NutriChat</string>
    <string name="aktif">aktif</string>
    <string name="tulis_pesan">Tulis pesan</string>
    <string name="avatar_description">Avatar NutriChat</string>
    <string name="camera_description">Buka kamera</string>
    <string name="gallery_description">Buka galeri</string>
    <string name="send_description">Kirim pesan</string>
    <string name="back_button_description">Tombol Kembali</string>
    <string name="name">Rizki Febian</string>
    <string name="mail">ABCDE@gmail.com</string>
    <string name="telp">+628556654333</string>
    <string name="edit_button_description">Tombol untuk mengedit profil</string>
    <string name="profile_image_description">Foto profil pengguna</string>
    <string name="program_icon_description">Ikon program bulking</string>
    <string name="location_icon_description">Ikon pengaturan lokasi</string>
    <string name="lokasi">Lokasi</string>
    <string name="arrow_right_icon_description">Ikon panah ke kanan</string>
    <string name="logout_icon_description">Ikon untuk logout</string>
    <string name="edit_icon_description">Edit Profile</string>
    <string name="profil">Profil</string>
    <string name="location_icon">Location Icon</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="registrasi">Registrasi</string>
    <string name="text_label">"Sehat itu bukan tujuan, tapi perjalanan.
        Yuk, Tambah masa otot !"</string>
    <string name="food_image">Food Image</string>
    <string name="hari_ke_x">Hari ke X</string>
    <string name="selesai">Selesai</string>
    <string name="bulking_teks">Latihan yang akan membuatmu\nmenjadi yang kamu mau</string>
    <string name="username_placeholder">usernameProfil\n</string>
    <string name="NamaErika_navesya">Erika Navesya</string>
    <string name="erika_navesya">Erika Navesya</string>
    <string name="erikanavesya_gmail_com">erikanavesya@gmail.com</string>
    <string name="selamat_datang">Selamat Datang !</string>
    <string name="masuk_ke_akun_anda">Masuk ke akun anda</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="email">Email:</string>
    <string name="name_loading">Name: Loading...</string>
    <string name="deskripsi_resep">Deskripsi Resep</string>
    <string name="bahan">Bahan</string>
    <string name="langkah_langkah">Langkah-langkah</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="kontak_penyelenggara">Kontak Penyelenggara</string>
    <string name="nama">Nama:</string>
    <string-array name="BMI">
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string name="chat_scroll_description">This is the chat area. Conversations will appear here.</string>

</resources>