<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="12dp">

        <!-- Image -->
        <ImageView
            android:id="@+id/imageFood"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/food_image"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_placeholder" />

        <!--  Text & Status -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hari_ke_x"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSelesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selesai"
                android:textSize="12sp"
                android:textColor="@color/green"
                android:layout_marginTop="4dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
